[tool.poetry]
name = "pumpfunbot"
version = "0.1.0"
description = ""
authors = ["ayrelia1 <nikitakoteqka12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.13.0"
pyrogram = "^2.0.106"
aiosqlite = "^0.20.0"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
